--- a/.env.example
+++ b/.env.example
@@ -24,9 +24,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mariadb
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=helpflow
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=helpdesk
+DB_USERNAME=helpdesk
+DB_PASSWORD=helpdesk
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
