--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build && vite build --ssr",
+        "build": "vite build && vite build --ssr && vite build && vite build --ssr --ssr",
         "dev": "vite"
     },
     "devDependencies": {
