--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build && vite build --ssr && vite build && vite build --ssr --ssr",
+        "build": "vite build && vite build --ssr",
         "dev": "vite"
     },
     "devDependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^1.0.14",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
